Initial configuration settings added

--- a/src/test/resources/services-local.conf
+++ b/src/test/resources/services-local.conf
@@ -19,9 +19,15 @@
 
 
 services {
-    example-frontend{
+    self-assessment-assist {
       protocol = http
       host = localhost
-      port = 9080
+      port = 8342
+    }
+
+    auth-login-api {
+       protocol = http
+       host = localhost
+       port = 8585
     }
 }
