--- a/src/test/resources/services.conf
+++ b/src/test/resources/services.conf
@@ -19,9 +19,14 @@
 
 
 services {
-  example-frontend{
+  self-assessment-assist {
     protocol = https
-    host = www.staging.tax.service.gov.uk
+    host = self.assessment.assist.api.protected.mdtp
     port = 443
   }
+  auth-login-api {
+    host = auth-login-api.protected.mdtp
+    protocol = https
+    port = 443
+    }
 }
