Further configurations added

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -16,7 +16,8 @@
 # When true, services-local.conf file is used. When false, services.conf is used
 #runLocal = false
 
-baseUrl = "https://admin.staging.tax.service.gov.uk"
+baseUrl = "https://www.staging.tax.service.gov.uk"
+adminBaseUrl = "https://admin.staging.tax.service.gov.uk"
 
 perftest {
 
