--- a/src/test/resources/services.conf
+++ b/src/test/resources/services.conf
@@ -32,11 +32,12 @@
 services {
   self-assessment-assist {
     protocol = https
-    host = self.assessment.assist.api.protected.mdtp
+    host = www.staging.tax.service.gov.uk
     port = 443
   }
+
   auth-login-api {
-    host = auth-login-api.protected.mdtp
+    host = www.staging.tax.service.gov.uk
     protocol = https
     port = 443
     }
