--- a/src/test/resources/journeys.conf
+++ b/src/test/resources/journeys.conf
@@ -15,28 +15,24 @@
 # Configure here your journeys. A journey is a sequence of requests at a certain load.
 
 journeys {
-
-  # Example
-  # Give a name to the journey.
   example-journey = {
-
-    # The description will appear in the test report. Use something meaningful
     description = "Auth Login API Requests"
-
-    # The load is in journeys per second. Put here the load you are going to have at the peak.
-    # There is no need to put a higher value at this point. Use prerftest.loadPercentage in application.conf instead
     load = 1
-
-    # This points to a csv file with the data you need to inject in the journey. [More here](https://github.com/hmrc/performance-test-runner#step-4-configure-the-user-feeder)
-    #feeder = data/example.csv
-
-    # The parts your journey is made of. A part is made one or more requests.
     parts = [
+      API-Individual,
       API-Agent,
       API-Organisation
     ]
   }
 
+    example-journey = {
+      description = "Self Assessment Assist API Requests"
+      load = 1
+      parts = [
+        Self-Assessment-Assist-Generate-Report,
+        Self-Assessment-Assist-Acknowledge-Report
+      ]
+    }
 }
 
 
