--- a/src/test/resources/journeys.conf
+++ b/src/test/resources/journeys.conf
@@ -15,7 +15,7 @@
 # Configure here your journeys. A journey is a sequence of requests at a certain load.
 
 journeys {
-  example-journey = {
+  auth-login-api = {
     description = "Auth Login API Requests"
     load = 1
     parts = [
@@ -25,7 +25,7 @@ journeys {
     ]
   }
 
-    example-journey = {
+    self-assessment-assist = {
       description = "Self Assessment Assist API Requests"
       load = 1
       parts = [
