TRDT-730 Update services.conf with auth and servie

--- a/src/test/resources/services.conf
+++ b/src/test/resources/services.conf
@@ -32,13 +32,13 @@
 services {
   self-assessment-assist {
     protocol = https
-    host = www.staging.tax.service.gov.uk
+    host = self-assessment-assist.protected.mdtp
     port = 443
   }
 
   auth-login-api {
-    host = www.staging.tax.service.gov.uk
     protocol = https
+    host = auth-login-api.protected.mdtp
     port = 443
-    }
+  }
 }
