TRDT-730 Add performance test for individual journey

--- a/src/test/resources/journeys.conf
+++ b/src/test/resources/journeys.conf
@@ -15,24 +15,17 @@
 # Configure here your journeys. A journey is a sequence of requests at a certain load.
 
 journeys {
-    auth-login-api = {
-        description = "Auth Login API Requests"
+
+    generate-and-acknowledge-report-individual-version-1.0 = {
+        description = "Self Assessment Assist - Generate and acknowledge report as individual"
         load = 1
         parts = [
-          API-Individual,
-          API-Agent,
-          API-Organisation
+            login-individual,
+            generate-report,
+            acknowledge-report
         ]
     }
 
-    self-assessment-assist = {
-        description = "Self Assessment Assist API Requests"
-        load = 1
-        parts = [
-            Self-Assessment-Assist-Generate-Report,
-            Self-Assessment-Assist-Acknowledge-Report
-        ]
-    }
 }
 
 
