--- a/src/test/resources/services-local.conf
+++ b/src/test/resources/services-local.conf
@@ -41,4 +41,10 @@ services {
        host = localhost
        port = 8585
     }
+
+    des-auth-stub {
+        protocol = http
+        host = localhost
+        port = 9612
+    }
 }
