TRDT-730 Add journey for agents

--- a/src/test/resources/services-local.conf
+++ b/src/test/resources/services-local.conf
@@ -42,7 +42,7 @@ services {
        port = 8585
     }
 
-    des-auth-stub {
+    auth-des-stub {
         protocol = http
         host = localhost
         port = 9612
