--- a/src/test/resources/services.conf
+++ b/src/test/resources/services.conf
@@ -41,4 +41,10 @@ services {
     host = auth-login-api.protected.mdtp
     port = 443
   }
+
+  auth-des-stub {
+      protocol = https
+      host = auth-des-stub.protected.mdtp
+      port = 443
+  }
 }
