--- a/src/test/resources/journeys.conf
+++ b/src/test/resources/journeys.conf
@@ -16,13 +16,23 @@
 
 journeys {
 
-    generate-and-acknowledge-report-individual-version-1.0 = {
+    generate-and-acknowledge-report-individual-version-1 = {
         description = "Self Assessment Assist - Generate and acknowledge report as individual"
         load = 1
         parts = [
             login-individual,
             generate-report,
             acknowledge-report
+        ]
+    }
+
+    generate-and-acknowledge-report-agent-version-1 = {
+        description = "Self Assessment Assist - Generate and acknowledge report as agent"
+        load = 1
+        parts = [
+            login-agent,
+            generate-report-as-agent,
+            acknowledge-report-as-agent
         ]
     }
 
