TRDT-730 Replace insert nino API call

--- a/src/test/resources/journeys.conf
+++ b/src/test/resources/journeys.conf
@@ -20,6 +20,7 @@ journeys {
         description = "Self Assessment Assist - Generate and acknowledge report as individual"
         load = 1
         parts = [
+            insert-nino,
             login-individual,
             generate-report,
             acknowledge-report
@@ -30,6 +31,7 @@ journeys {
         description = "Self Assessment Assist - Generate and acknowledge report as agent"
         load = 1
         parts = [
+            insert-nino,
             login-agent,
             generate-report-as-agent,
             acknowledge-report-as-agent
